[package]
name = "dequemap"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ProgramCrafter/dequemap"
license = "Apache-2.0 OR MIT"
description = "A two-level DequeMap with fast iteration. It supports fast indexing, including range iterators. Many implementation details are delegated to std's flatten iterators."
keywords = ["btreemap", "map", "order-statistic"]
categories = ["data-structures"]

[dependencies]
ftree = "1.2.0"
