[package]
name = "liquemap"
version = "0.3.0"
edition = "2024"
authors = ["Ender Ting <pythonhunter146@gmail.com>"]
repository = "https://github.com/ProgramCrafter/dequemap"
license = "Apache-2.0 OR MIT"
description = "A two-level-list key-ordered LiqueMap with fast iteration. It supports fast indexing, including range iterators. Many implementation details are delegated to std's flatten iterators."
keywords = ["btreemap", "map", "order-statistic"]
categories = ["data-structures"]

[dependencies]
ftree = "1.2.0"
